fix: adjusting component spacing

--- a/src/stylesheets/PromptForm.scss
+++ b/src/stylesheets/PromptForm.scss
@@ -1,4 +1,5 @@
 .formContainer {
+  margin-top: 36px;
   display: flex;
   flex-direction: column;
   align-items: center;
